Fix homepage width and alignment of posts

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -418,7 +418,9 @@ table td {
 }
 
 .home-posts {
+  margin: auto;
   padding-top: 20px;
+  width: 80%;
 }
 
 /* SINGLE */
